--- a/style/style.css
+++ b/style/style.css
@@ -11,9 +11,6 @@ header,main{
     background-color: white;
 }
 /* colori */
-.text-light-gray{
-    color:rgb(176, 176, 176);
-}
 .text-white{
     color: white;
 }
@@ -51,6 +48,8 @@ header{
 main{
     width: 80%;
     margin: auto;
+    padding-bottom: 30px;
+    border-radius: 5px;
 }
 /* nav  */
 nav{
@@ -62,7 +61,37 @@ padding: 5px;
 border:1px rgb(176, 176, 176) solid;
 border-radius: 10px;
 background-color: #fff;
+color: rgb(176, 176, 176);
 }
+/* sections  */
 section{
     margin: 30px 50px 0 50px;
+}
+main section h3::before{
+    content: "\2BC6  ";
+    font-size: 15px;
+}
+main section ul li{
+    margin-top: 15px;
+}
+.check{
+    font-size: 7px;
+    border: 1px rgb(100, 192, 169) solid;
+    border-radius: 50%;
+    color: rgb(100, 192, 169);
+    padding: 3px;
+}
+.tag{
+    padding: 2px 4px;
+    border-radius: 10px;
+    font-size: 12px;
+    color: white;
+}
+.cross{
+    
+    font-size: 7px;
+    border: 1px red solid;
+    border-radius: 50%;
+    color: red;
+    padding: 3px;
 }
